--- a/css/style.less
+++ b/css/style.less
@@ -78,8 +78,8 @@ basic
 @yellow-dark: #ffcc00;
 @orange: #f68409;
 @green: #199d54;
-@border-normal: 1px solid #eee; /* mixin */
-
+@border-normal: 1px solid #eee;
+/* mixin */
 .bold {
   font-weight: bold;
 }
@@ -327,7 +327,6 @@ basic
   }
 }
 /* header */
-
 * {
   .box-sizing;
 }
@@ -370,7 +369,6 @@ a {
   color: @gray;
 }
 /*font*/
-
 html {
   min-width: @min-width;
 }
