--- a/css/style.css
+++ b/css/style.css
@@ -1084,10 +1084,6 @@ body .sub .container dl.view dt {
   padding-left: 0.71428571rem;
   border-top: 1px solid #c7c7c7;
 }
-body .sub .container dl.view dt.text {
-  height: 6.42857143rem;
-  line-height: 6.42857143rem;
-}
 @media all and (min-width: 1200px) {
   body .sub .container dl.view dt {
     font-size: 20px;
@@ -1106,7 +1102,8 @@ body .sub .container dl.view dd {
   display: inline-block;
   min-height: 2.64285714rem;
   width: calc(100% -  7.85714286rem);
-  padding: 0.28571429rem;
+  padding: 0.28571429rem 0.71428571rem;
+  line-height: 2.64285714rem;
   border-top: 1px solid #c7c7c7;
 }
 @media all and (min-width: 1200px) {
@@ -1167,15 +1164,9 @@ body .sub .container dl.view dd P i {
   }
 }
 body .sub .container dl.view dd.text {
-  height: 6.42857143rem;
-}
-body .sub .container dl.view dd.text textarea {
-  display: inline-block;
-  width: 100%;
-  height: 6.42857143rem;
-  border: none;
-  outline: none;
-  padding: 0.71428571rem;
+  line-height: 1.4;
+  height: auto;
+  padding: 0.85714286rem 0.71428571rem;
 }
 body .sub .container table {
   font-size: 1.14285714rem;
